<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="16dp"
        android:text="@string/Quantity_of_Cups"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"

        tools:textColor="@android:color/black" />

    <TextView
        android:id="@+id/toppingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="toppings"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/wippedCreamChB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/Whipped_cream"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chocolateChB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/Chocolate"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/munis-button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_above="@+id/quantity-_text-view"
            android:layout_weight="1"
            android:onClick="decrementCoffee"
            android:text="-"
            tools:textAllCaps="true"
            tools:textColor="@android:color/black" />

        <TextView
            style = "@style/CustomText"
            android:id="@+id/quantity-_text-view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#faf6e1"
            android:gravity="center"
            android:text="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible"
            tools:textSize="18sp" />


        <Button
            android:id="@+id/plus-button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="incrementCoffee"
            android:text="+"
            tools:textAllCaps="true"
            tools:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        style = "@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:text="@string/Order_Summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible"
        tools:textColor="@android:color/black" />

    <TextView
        android:id="@+id/order_summary_text-view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="$0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        tools:layout_margin="20dp"
        tools:textColor="@android:color/black"

        />

    <Button
        android:id="@+id/order-button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="submitOrder"
        android:soundEffectsEnabled="true"
        android:text="@string/order"
        android:visibility="visible"
        tools:textAllCaps="true"
        tools:textColor="@android:color/black" />

    <Button
        android:id="@+id/sendEmailButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="sendEmail"
        android:soundEffectsEnabled="true"
        android:text="@string/Send_Email"
        android:visibility="visible"

        tools:textAllCaps="true"
        tools:textColor="@android:color/black"
        />


</LinearLayout>
    </ScrollView>
